--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 5003
-MONGO_URL="mongodb+srv://dhruvsharma10082004:8NOPkbQZsrvFFWjD@jobchat.amfigwm.mongodb.net/jobchat"
+MONGO_URL=mongodb+srv://dhruvsharma10082004:8NOPkbQZsrvFFWjD@jobchat.amfigwm.mongodb.net/jobchat
 JWT_SEC= fsediojiiofvio
 SECRET=ggergerjgioerjf
 
