--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      },
-      {
-        "src": "/(?!api)(.*)",
-        "dest": "/"
-      }
-    ]
-  }
+    "version":2,
+    "builds":[{"src":"./index.js","use":"@vercel/node"}],
+    "routes":[{"src": "/(.*)","dest":"/"}]
+}
